// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color 1`] = `
Object {
  "component": <div
    className="a b c"
>
    <div
        className="a d c e f g"
    />
    <input
        className="h b c i j k l m n o p q r"
        maxLength={1}
        onChange={[Function]}
    />
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{flex-direction:row}
    .e{margin-bottom:0}
    .f{align-items:flex-start}
    .g{flex-wrap:wrap}
    .h{display:inline}
    .i{white-space:pre-wrap}
    .j{overflow-wrap:break-word}
    .k{-ms-hyphens:auto}
    .l{color:blue}
    .m{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .n{font-size:16}
    .o{line-height:24px}
    .p::placeholder{color:rgba(0, 0, 255, 0.5)}
    .q{background-color:transparent}
    .r{outline:none}",
}
`;

exports[`disabled 1`] = `
Object {
  "component": <div
    className="a b c"
>
    <div
        className="a d c e f g"
    />
    <input
        className="h b c i j k l m n o p q r s"
        disabled={true}
        maxLength={1}
        onChange={[Function]}
    />
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{flex-direction:row}
    .e{margin-bottom:0}
    .f{align-items:flex-start}
    .g{flex-wrap:wrap}
    .h{display:inline}
    .i{opacity:0.5}
    .j{white-space:pre-wrap}
    .k{overflow-wrap:break-word}
    .l{-ms-hyphens:auto}
    .m{color:black}
    .n{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .o{font-size:16}
    .p{line-height:24px}
    .q::placeholder{color:rgba(0, 0, 0, 0.5)}
    .r{background-color:transparent}
    .s{outline:none}",
}
`;

exports[`error 1`] = `
Object {
  "component": <div
    className="a b c"
>
    <div
        className="a d c e f g"
    >
        <div
            className="h b c i j k l m n o p"
        >
            error
        </div>
    </div>
    <input
        className="h b c i j k q m n o r s t"
        maxLength={1}
        onChange={[Function]}
    />
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{flex-direction:row}
    .e{margin-bottom:0}
    .f{align-items:flex-start}
    .g{flex-wrap:wrap}
    .h{display:inline}
    .i{white-space:pre-wrap}
    .j{overflow-wrap:break-word}
    .k{-ms-hyphens:auto}
    .l{color:red}
    .m{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .n{font-size:16}
    .o{line-height:24px}
    .p{font-weight:600}
    .q{color:black}
    .r::placeholder{color:rgba(0, 0, 0, 0.5)}
    .s{background-color:transparent}
    .t{outline:none}",
}
`;

exports[`label 1`] = `
Object {
  "component": <div
    className="a b c"
>
    <div
        className="a d c e f g"
    >
        <div
            className="h b c i j k l m n o p"
        >
            label
        </div>
    </div>
    <input
        className="h b c i j k l m n o q r s"
        maxLength={1}
        onChange={[Function]}
    />
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{flex-direction:row}
    .e{margin-bottom:0}
    .f{align-items:flex-start}
    .g{flex-wrap:wrap}
    .h{display:inline}
    .i{white-space:pre-wrap}
    .j{overflow-wrap:break-word}
    .k{-ms-hyphens:auto}
    .l{color:black}
    .m{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .n{font-size:16}
    .o{line-height:24px}
    .p{font-weight:600}
    .q::placeholder{color:rgba(0, 0, 0, 0.5)}
    .r{background-color:transparent}
    .s{outline:none}",
}
`;

exports[`render 1`] = `
Object {
  "component": <div
    className="a b c"
>
    <div
        className="a d c e f g"
    />
    <input
        className="h b c i j k l m n o p q r"
        maxLength={1}
        onChange={[Function]}
    />
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{flex-direction:row}
    .e{margin-bottom:0}
    .f{align-items:flex-start}
    .g{flex-wrap:wrap}
    .h{display:inline}
    .i{white-space:pre-wrap}
    .j{overflow-wrap:break-word}
    .k{-ms-hyphens:auto}
    .l{color:black}
    .m{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .n{font-size:16}
    .o{line-height:24px}
    .p::placeholder{color:rgba(0, 0, 0, 0.5)}
    .q{background-color:transparent}
    .r{outline:none}",
}
`;
